# Cortex

./: .gitignore  DESIGN.md  docker-compose.yml  schema.sql
cortex/: Dockerfile  pyproject.toml
cortex-cli/: pyproject.toml
cortex-cli/src/cortex_cli/: __init__.py  main.py
cortex/src/cortex/: __init__.py  db.py  embeddings.py  main.py  models.py
subvox/: README.md  prompt.md  pyproject.toml
subvox/src/subvox/: __init__.py  config.py  otel.py  prompt_hook.py  stop_hook.py
