[project]
name = "cortex-cli"
version = "0.1.0"
description = "CLI for Cortex semantic memory service"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "pendulum>=3.0.0",
    "opentelemetry-api>=1.20.0",
    "pondside @ file:///Pondside/Basement/SDK",
]

[project.scripts]
cortex = "cortex_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_cli"]
