[project]
name = "cortex"
version = "0.1.0"
description = "Semantic memory service for Alpha"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "redis>=5.0",
]

[project.scripts]
cortex-server = "cortex.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]
