[project]
name = "subvox"
version = "0.1.0"
description = "Short-term memory layer for Cortex - the voice that whispers"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0",
    "httpx>=0.28",
]

[project.scripts]
subvox-stop = "subvox.stop_hook:main"
subvox-prompt = "subvox.prompt_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subvox"]
